Add index.html file

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ pre code {
 </div>
 <div id="fs-of-my-life-in-this-order-of-priority-faith-family-friends-finance-fitness" class="section level2">
 <h2>5 F’s of my life (in this order of priority): Faith, Family, Friends, Finance, Fitness</h2>
-<p>###The other tabs represent work / analyses that I have completed. Please check them out!</p>
+<p>The other tabs represent work / analyses that I have completed. Please check them out!</p>
 </div>
 </div>
 
